# wsdm

./: README.md  pyproject.toml
notebook/: causal_lm_infer_check_preds.ipynb  causal_lm_zero_shot_check_preds.ipynb  check_data.ipynb  openai.ipynb  template.ipynb
run/: causal_lm_infer.py  causal_lm_infer_openai.py  causal_lm_train.py  causal_lm_zero_shot.py  classification_infer.py  classification_train.py  evaluate.py  zero_shot_causal_lm.py  zero_shot_openai.py
run/conf/: accelerate.yaml  causal_lm_infer.yaml  causal_lm_infer_openai.yaml  causal_lm_train.yaml  causal_lm_zero_shot.yaml  classification_infer.yaml  classification_train.yaml  cross_validation.yaml  early_stopping.yaml  evaluate.yaml  lora.yaml  preprocess.yaml  quantization.yaml  training.yaml  zero_shot_causal_lm.yaml  zero_shot_openai.yaml
src/wsdm/: causal_lm_dataloader.py  causal_lm_infer.py  causal_lm_train.py  classification_dataloader.py  classification_train.py  cross_validation.py  evaluate.py  postprocess.py  preprocess.py  prompt.py  request_openai.py  trainer.py
src/wsdm/causal_lm/: infer.py  train.py
src/wsdm/classification/: infer.py  train.py
